Fixed slider overlapping by GitHub SVG.

--- a/docs/styles/theme.css
+++ b/docs/styles/theme.css
@@ -4,7 +4,7 @@
   width: 50px;
   height: 25px;
   margin-left: 15px;
-  margin-top: 12px;
+  margin-top: 30px;
   float: right;   
 }
 
@@ -52,6 +52,10 @@ input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+div[style="overflow:auto"]{
+  margin-top: 15px;
 }
 
 /* Rounded sliders */
